--- a/src/main/python/api/templates/layout.html
+++ b/src/main/python/api/templates/layout.html
@@ -15,6 +15,12 @@
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
                   <a class="nav-item nav-link" href="{{ url_for('main.symbols') }}">All tickers</a>
+
+<!--                    <a class="nav-item nav-link" href="{{ url_for('main.results') }}">Results</a>-->
+
+                    <a class="nav-item nav-link" href="{{ url_for('main.report') }}">Report</a>
+
+
                   <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
                 </div>
               </div>
