--- a/src/main/python/api/templates/layout.html
+++ b/src/main/python/api/templates/layout.html
@@ -16,7 +16,7 @@
                     <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
                   <a class="nav-item nav-link" href="{{ url_for('main.symbols') }}">All tickers</a>
 
-<!--                    <a class="nav-item nav-link" href="{{ url_for('main.results') }}">Results</a>-->
+<!--                    <a class="nav-item nav-link" href="{{ url_for('main.report') }}">Results</a>-->
 
                     <a class="nav-item nav-link" href="{{ url_for('main.report') }}">Report</a>
 
